// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlacementOrdering render shows toggle 1`] = `
<div
  className="placementOrdering"
>
  <br />
  <_default
    onToggle={[Function]}
    show={true}
    toggled={false}
  />
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
  <OrderingTiler
    includeTargets={true}
    instanceId="3"
    onDropChoice={[Function]}
    onRemoveChoice={[Function]}
    ordering={Object {}}
    tiler={[Function]}
  />
  <br />
  <Feedback />
</div>
`;

exports[`PlacementOrdering render snapshot 1`] = `
<div
  className="placementOrdering"
>
  <br />
  <_default
    onToggle={[Function]}
    toggled={false}
  />
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
  <OrderingTiler
    includeTargets={true}
    instanceId="1"
    onDropChoice={[Function]}
    onRemoveChoice={[Function]}
    ordering={Object {}}
    tiler={[Function]}
  />
  <br />
  <Feedback />
</div>
`;

exports[`PlacementOrdering render snapshot with rationale 1`] = `
<div
  className="placementOrdering"
>
  <br />
  <_default
    onToggle={[Function]}
    toggled={false}
  />
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
  <OrderingTiler
    includeTargets={true}
    instanceId="5"
    onDropChoice={[Function]}
    onRemoveChoice={[Function]}
    ordering={Object {}}
    tiler={[Function]}
  />
  <br />
  <Component
    labels={
      Object {
        "hidden": "Show Rationale",
        "visible": "Hide Rationale",
      }
    }
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "This is rationale.",
        }
      }
    />
  </Component>
  <Feedback />
</div>
`;
